# evolutiondb

./: .env.example  .gitignore  404.html  CLAUDE.md  COPYRIGHT.md  Dockerfile  Makefile  README.md  artifacthub-repo.yml  docker-compose.bench.yml  docker-compose.demo.yml  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  evolutiondb-0.1.0.tgz  evolutiondb-0.2.2.tgz  evolutiondb-2.0.3.tgz  evolutiondb-2.0.4.tgz  evolutiondb-2.0.5.tgz  evolutiondb-2.0.6.tgz  evolutiondb-2.0.7.tgz  evolutiondb-2.0.8.tgz  evolutiondb-2.0.9.tgz  evolutiondb-2.1.0.tgz  evolutiondb-3.0.0.tgz  features.md  index.html  index.yaml  mkdocs.yml  sitemap.xml  tasks.md
PopPad/: Makefile  PopPad.c  PopPrnt.c  RESOURCE.H  build.bat  poppad.h  poppad.rc
adaptor/: Makefile  catalog.c  catalog.h  distributed.c  distributed.h  evo_protocol.c  evo_protocol.h  join.c  join.h  main.c  net.c  net.h  notify.c  notify.h  pg_handler.c  pg_handler.h  pg_protocol.c  pg_protocol.h  platform.h  policy.c  policy.h  pool.c  query_executor.c  query_executor.h  raft.c  raft.h  replication.c  replication.h  result.c  result.h  scram.c  scram.h  server.c  server.h  shard.c  shard.h  test_client.py  test_dbeaver.py  tls.c  tls.h  (+5 more)
agent-site/: index.html
bench/: README.md  _common.py  run_all.py
client/azure-devops-sync/: .env.example  README.md  pyproject.toml
client/azure-devops-sync/azure_devops_sync/: __init__.py  api.py  state.py  sync.py
client/azure-devops-sync/tests/: test_sync.py
client/browser-sync/: pyproject.toml
client/browser-sync/browser_sync/: __init__.py  extract.py  scanner.py  state.py  sync.py
client/claude-session-sync/: .env.example  README.md  pyproject.toml
client/claude-session-sync/claude_session_sync/: __init__.py  __main__.py  state.py  sync.py
client/claude-session-sync/tests/: test_sync.py
client/evolution-agent/: README.md  pyproject.toml
client/evolution-agent/evolution_agent/: __init__.py  __main__.py  cli.py  loop.py  web.py
client/evolution-agent/examples/: demo.py
client/evolution-agent/tests/: test_cli.py  test_loop.py  test_oidc.py  test_web.py
client/evolution-agent/web/: index.html
client/evolutiondb-pii/: README.md  pyproject.toml
client/evolutiondb-pii/evolutiondb_pii/: __init__.py  __main__.py  crypto.py  detect.py  integration.py  keystore.py  mask.py  rule_store.py  rules.py  store_io.py  token_cli.py  token_store.py  validators.py
client/evolutiondb-pii/evolutiondb_pii/data/: default_rules.json
client/evolutiondb-pii/tests/: test_pii.py  test_token_store.py
client/github-sync/: .env.example  README.md  pyproject.toml
client/github-sync/github_sync/: __init__.py  __main__.py  api.py  state.py  sync.py
client/github-sync/tests/: test_sync.py
client/gmail-sync/: .env.example  README.md  pyproject.toml
client/gmail-sync/gmail_sync/: __init__.py  api.py  auth.py  state.py  sync.py
client/gmail-sync/tests/: test_sync.py
client/mcp-server-evosql/: CHANGELOG.md  PUBLISH.md  README.md  pyproject.toml  quality_test.py  selftest_gmail.py  selftest_imessage.py  selftest_outlook.py  selftest_teams.py  server.json  smithery.yaml
client/mcp-server-evosql/dxt/: SUBMISSION.md  build.sh  manifest.json
client/mcp-server-evosql/dxt/server/: main.py
client/mcp-server-evosql/examples/: chatgpt_mcp.json  claude_desktop_config.json  gemini_settings.json
client/mcp-server-evosql/mcp_server_evosql/: __init__.py  __main__.py  activation.py  audit.py  backfill_emb2.py  brief.py  calibration.py  codereview.py  consolidation.py  control_plane.py  decay.py  dsar.py  embedded.py  embeddings.py  entities.py  episodes.py  gist.py  graph.py  health.py  http_transport.py  identity.py  identity_cli.py  inbox_digest.py  inspector.py  key_rotation.py  learn.py  llm.py  locales.py  meeting.py  oauth_proxy.py  open_loops.py  operator_auth.py  outbox.py  pii_egress.py  pii_gate.py  prefs.py  profile.py  provider_policy.py  query_transform.py  rebuild_embeddings.py  (+23 more)
client/mcp-server-evosql/mcp_server_evosql/locales/: en.json  tr.json
client/mcp-server-evosql/tests/: _assistant_fakes.py  test_access_store.py  test_activation.py  test_activation_cutover.py  test_ado_loops.py  test_arousal.py  test_assistant_integration.py  test_assistant_jobs.py  test_audit.py  test_boost_switch.py  test_brief.py  test_calibration.py  test_closed_loop.py  test_codereview.py  test_consolidation.py  test_control_plane.py  test_core_memory.py  test_decay.py  test_dsar.py  test_dup_key_fetch.py  test_embedded.py  test_embeddings.py  test_enrichment_routing.py  test_entities.py  test_episodes.py  test_evidence.py  test_fan_spread.py  test_feedback.py  test_gist.py  test_github_loops.py  test_graph.py  test_guardrails.py  test_health.py  test_http_transport.py  test_identity.py  test_inbox_digest.py  test_inspector.py  test_intentions.py  test_key_rotation.py  test_learn.py  (+59 more)
client/mcp-server-evosql/web/: control.html
client/notes-sync/: pyproject.toml
client/notes-sync/notes_sync/: __init__.py  state.py  sync.py
client/notion-sync/: pyproject.toml
client/notion-sync/notion_sync/: __init__.py  api.py  state.py  sync.py
client/orchestrator/: README.md  pyproject.toml
client/orchestrator/orchestrator/: __init__.py  cli.py  client_install.py  config.py  inspector_mgr.py  install.py  schedule.py  state.py  supervisor.py  tunnel.py  web.py
client/orchestrator/tests/: test_inspector_mgr.py  test_install.py  test_schedule.py  test_state.py  test_supervisor.py  test_tunnel.py
client/outlook-sync/: README.md  pyproject.toml
client/outlook-sync/outlook_sync/: __init__.py  api.py  auth.py  state.py  sync.py
client/rust-evosql-memory/: Cargo.toml  README.md  build.rs
client/rust-evosql-memory/examples/: put_get.rs
client/rust-evosql-memory/src/: lib.rs
client/teams-sync/: .env.example  Dockerfile  PUBLISH.md  README.md  pyproject.toml
client/teams-sync/teams_sync/: __init__.py  auth.py  embedded.py  graph.py  setup_cmd.py  state.py  sync.py
client/youtube-sync/: pyproject.toml
client/youtube-sync/youtube_sync/: __init__.py  api.py  auth.py  state.py  sync.py
(+1009 files in other folders)
