[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evolutiondb-browser-sync"
version = "0.1.1"
description = "Sync browser history (Chrome, Edge, Firefox) into EvolutionDB long-term memory."
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = [
    "evolutiondb",
    "browser",
    "history",
    "chrome",
    "edge",
    "firefox",
    "long-term-memory",
    "agent-memory",
    "mcp",
]
authors = [
    {name = "alptekin topal", email = "topal.alptekin@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
]

dependencies = [
    "psycopg[binary]>=3.1",
]

[project.urls]
Homepage   = "https://github.com/alptekin/evolutiondb"
Repository = "https://github.com/alptekin/evolutiondb"
Source     = "https://github.com/alptekin/evolutiondb/tree/main/client/browser-sync"
Issues     = "https://github.com/alptekin/evolutiondb/issues"

[project.scripts]
evolutiondb-browser-sync = "browser_sync.__main__:main"

[tool.setuptools.packages.find]
include = ["browser_sync*"]
