[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evolutiondb-agent"
version = "0.1.0"
description = "Standalone agent loop over EvolutionDB's MCP tools — host-independent (drives the model itself instead of running under Claude Desktop), with the human-approved send invariant (ADR-004) kept intact."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = [
    "evolutiondb", "agent", "mcp", "long-term-memory", "agent-memory",
    "anthropic", "claude", "assistant",
]
authors = [{ name = "alptekin topal", email = "topal.alptekin@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp-server-evolutiondb>=1.16.0",
]

[project.optional-dependencies]
# The default model runs through the Anthropic SDK. Any provider with a
# compatible `messages.create(...)` client can be injected instead.
anthropic = [
    "anthropic>=0.39",
]

[project.urls]
Homepage = "https://github.com/alptekin/evolutiondb"
Repository = "https://github.com/alptekin/evolutiondb"
Source = "https://github.com/alptekin/evolutiondb/tree/main/client/evolution-agent"
Issues = "https://github.com/alptekin/evolutiondb/issues"

[project.scripts]
evoagent = "evolution_agent.cli:main"
evolution-agent = "evolution_agent.__main__:main"
evolution-agent-web = "evolution_agent.web:main"

[tool.setuptools.packages.find]
include = ["evolution_agent*"]

[tool.setuptools.package-data]
# Ship the single-file web chat UI served by `evolution-agent-web`.
evolution_agent = ["../web/index.html"]
