[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evolutiondb-pii"
version = "0.3.0"
description = "PII detection, masking, and hybrid AES-256-GCM + RSA-OAEP encryption for EvolutionDB sync clients."
requires-python = ">=3.9"
license = {text = "MIT"}
readme = "README.md"
keywords = [
    "evolutiondb",
    "pii",
    "masking",
    "encryption",
    "rsa",
    "gdpr",
    "pci-dss",
    "agent-memory",
]
authors = [{name = "alptekin topal", email = "topal.alptekin@gmail.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "cryptography>=42",
    "psycopg[binary]>=3.1",
]

[project.urls]
Homepage   = "https://github.com/alptekin/evolutiondb"
Repository = "https://github.com/alptekin/evolutiondb"
Source     = "https://github.com/alptekin/evolutiondb/tree/main/client/evolutiondb-pii"
Issues     = "https://github.com/alptekin/evolutiondb/issues"

[project.scripts]
evolutiondb-pii = "evolutiondb_pii.__main__:main"

[tool.setuptools.packages.find]
include = ["evolutiondb_pii*"]

[tool.setuptools.package-data]
evolutiondb_pii = ["data/*.json"]
