[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evolutiondb-github-sync"
version = "0.1.0"
description = "Sync GitHub PR / issue activity you're involved in into EvolutionDB long-term memory."
requires-python = ">=3.9"
license = {text = "MIT"}
readme = "README.md"
keywords = [
    "evolutiondb",
    "github",
    "pull-requests",
    "long-term-memory",
    "agent-memory",
    "mcp",
]
authors = [
    {name = "alptekin topal", email = "topal.alptekin@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Version Control :: Git",
]

dependencies = [
    "psycopg[binary]>=3.1",
]

[project.urls]
Homepage   = "https://github.com/alptekin/evolutiondb"
Repository = "https://github.com/alptekin/evolutiondb"
Source     = "https://github.com/alptekin/evolutiondb/tree/main/client/github-sync"
Issues     = "https://github.com/alptekin/evolutiondb/issues"

[project.scripts]
evolutiondb-github-sync = "github_sync.__main__:main"

[tool.setuptools.packages.find]
include = ["github_sync*"]
