[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-server-evolutiondb"
version = "1.9.2"
description = "MCP (Model Context Protocol) server backed by EvolutionDB — gives Claude Desktop / Claude Code persistent long-term memory."
requires-python = ">=3.9"
license = {text = "MIT"}
readme = "README.md"
keywords = [
    "mcp",
    "model-context-protocol",
    "evolutiondb",
    "claude",
    "claude-desktop",
    "claude-code",
    "long-term-memory",
    "agent-memory",
]
authors = [
    {name = "alptekin topal", email = "topal.alptekin@gmail.com"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
# Semantic search via on-device sentence-transformers. The openai
# provider needs no extra package — it's plain urllib.
embeddings-local = [
    "sentence-transformers>=2.5",
]
# Real Turkish stemming for the gist channel (roadmap step 37). Without it
# the gist stemmer is English-only and Turkish inflections never collapse;
# with it, EVOSQL_GIST_STEMMER=auto (default) chains a morphological Turkish
# stemmer after the English-light pass so both languages collapse. Optional —
# the gist channel falls back to English-light when absent.
turkish = [
    "snowballstemmer>=2.2",
]

[project.urls]
Homepage      = "https://github.com/alptekin/evolutiondb"
Documentation = "https://alptekin.github.io/evolutiondb/"
Repository    = "https://github.com/alptekin/evolutiondb"
Issues        = "https://github.com/alptekin/evolutiondb/issues"
Source        = "https://github.com/alptekin/evolutiondb/tree/main/client/mcp-server-evosql"

[project.scripts]
mcp-server-evolutiondb = "mcp_server_evosql.__main__:main"
mcp-server-evosql      = "mcp_server_evosql.__main__:main"
evolutiondb-mcp-setup  = "mcp_server_evosql.setup:main"
evolutiondb-identity   = "mcp_server_evosql.identity_cli:main"
evolutiondb-inspector  = "mcp_server_evosql.inspector:main"
evolutiondb-tags       = "mcp_server_evosql.tagger_cli:main"
evolutiondb-mcp-http   = "mcp_server_evosql.http_transport:main"
evolutiondb-mcp-oauth  = "mcp_server_evosql.oauth_proxy:main"

[tool.setuptools.packages.find]
include = ["mcp_server_evosql*"]
