[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evolutiondb-notes-sync"
version = "0.1.2"
description = "Sync macOS Apple Notes into EvolutionDB long-term memory."
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["evolutiondb", "apple-notes", "notes", "macos",
            "long-term-memory", "agent-memory", "mcp"]
authors = [{name = "alptekin topal", email = "topal.alptekin@gmail.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Office/Business",
]
dependencies = ["psycopg[binary]>=3.1", "evolutiondb-pii>=0.1.1"]

[project.urls]
Homepage   = "https://github.com/alptekin/evolutiondb"
Repository = "https://github.com/alptekin/evolutiondb"
Source     = "https://github.com/alptekin/evolutiondb/tree/main/client/notes-sync"
Issues     = "https://github.com/alptekin/evolutiondb/issues"

[project.scripts]
evolutiondb-notes-sync = "notes_sync.__main__:main"

[tool.setuptools.packages.find]
include = ["notes_sync*"]
