[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evolutiondb-notion-sync"
version = "0.1.1"
description = "Sync Notion pages into EvolutionDB long-term memory."
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["evolutiondb", "notion", "long-term-memory",
            "agent-memory", "mcp"]
authors = [{name = "alptekin topal", email = "topal.alptekin@gmail.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Office/Business",
]
dependencies = ["psycopg[binary]>=3.1", "evolutiondb-pii>=0.1.1"]

[project.urls]
Homepage   = "https://github.com/alptekin/evolutiondb"
Repository = "https://github.com/alptekin/evolutiondb"
Source     = "https://github.com/alptekin/evolutiondb/tree/main/client/notion-sync"
Issues     = "https://github.com/alptekin/evolutiondb/issues"

[project.scripts]
evolutiondb-notion-sync = "notion_sync.__main__:main"

[tool.setuptools.packages.find]
include = ["notion_sync*"]
