[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evolutiondb-hub"
version = "0.2.0"
description = "One panel for every EvolutionDB sync connector and AI memory client. Web UI and terminal share the same controls."
requires-python = ">=3.9"
license = {text = "MIT"}
readme = "README.md"
keywords = [
    "evolutiondb",
    "mcp",
    "orchestration",
    "control-panel",
    "agent-memory",
]
authors = [
    {name = "alptekin topal", email = "topal.alptekin@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: System :: Systems Administration",
]

dependencies = []

[project.urls]
Homepage   = "https://github.com/alptekin/evolutiondb"
Repository = "https://github.com/alptekin/evolutiondb"
Source     = "https://github.com/alptekin/evolutiondb/tree/main/client/orchestrator"
Issues     = "https://github.com/alptekin/evolutiondb/issues"

[project.scripts]
evolutiondb-hub = "orchestrator.cli:main"

[tool.setuptools.packages.find]
include = ["orchestrator*"]
