[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evolutiondb-teams-sync"
version = "0.1.3"
description = "Sync Microsoft Teams 1:1 + group chat messages into EvolutionDB long-term memory."
requires-python = ">=3.9"
license = {text = "MIT"}
readme = "README.md"
keywords = [
    "evolutiondb",
    "microsoft-teams",
    "msgraph",
    "long-term-memory",
    "agent-memory",
    "mcp",
]
authors = [
    {name = "alptekin topal", email = "topal.alptekin@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Communications :: Chat",
]

dependencies = [
    "msal>=1.28",
    "httpx>=0.27",
    "psycopg[binary]>=3.1",
    "evolutiondb-pii>=0.1.1",
    # The MCP server speaks PG wire to the same memory store this
    # sync writes into, so a one-stop `pip install evolutiondb-teams-
    # sync` brings the Claude/ChatGPT/Gemini integration along.
    "mcp-server-evolutiondb>=1.3.0",
]

[project.urls]
Homepage   = "https://github.com/alptekin/evolutiondb"
Repository = "https://github.com/alptekin/evolutiondb"
Source     = "https://github.com/alptekin/evolutiondb/tree/main/client/teams-sync"
Issues     = "https://github.com/alptekin/evolutiondb/issues"

[project.scripts]
evosql-teams-sync = "teams_sync.sync:main"

[tool.setuptools.packages.find]
include = ["teams_sync*"]
