[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evolutiondb-youtube-sync"
version = "0.1.0"
description = "Sync YouTube subscriptions, playlists and liked videos into EvolutionDB long-term memory."
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["evolutiondb", "youtube", "google", "long-term-memory",
            "agent-memory", "mcp"]
authors = [{name = "alptekin topal", email = "topal.alptekin@gmail.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Multimedia :: Video",
]
dependencies = ["psycopg[binary]>=3.1"]

[project.urls]
Homepage   = "https://github.com/alptekin/evolutiondb"
Repository = "https://github.com/alptekin/evolutiondb"
Source     = "https://github.com/alptekin/evolutiondb/tree/main/client/youtube-sync"
Issues     = "https://github.com/alptekin/evolutiondb/issues"

[project.scripts]
evolutiondb-youtube-sync = "youtube_sync.__main__:main"

[tool.setuptools.packages.find]
include = ["youtube_sync*"]
